# InvaderC

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
include/: Asset.h  Config.h  Console.h  InvaderC.h  Main.h  Object.h
src/: Asset.c  Console.c  Enemy.c  Invader.c  Object.c  Player.c
